# bublyaash-vpn

./: .gitignore  CMakeLists.txt  README.md  VPN.pro  resources.qrc  servers.json
VPN.app/Contents/: Info.plist
VPN.app/Contents/MacOS/: VPN
include/: link_parser.h  main_window.h  mainwindow.h
src/: main.cpp  main_window.cpp  mainwindow.cpp
